connecting the stack view to the view controller

--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -73,6 +73,7 @@
                         <outlet property="mealNameLabel" destination="fEC-ie-82x" id="O1L-8M-gEQ"/>
                         <outlet property="nameTextField" destination="48w-lA-LYJ" id="Aq6-ka-IsI"/>
                         <outlet property="photoImageView" destination="AA1-jv-hrv" id="XC0-Aw-NY2"/>
+                        <outlet property="ratingControl" destination="sfo-MT-sRm" id="nI5-W8-YDM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
